demos/containerdays/servicemesh/cluster01-fredv2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fredv2
  namespace: fred
  labels:
    app.kubernetes.io/name: fredv2
  annotations:
     service.cilium.io/global: "true"
     service.cilium.io/affinity: "remote"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: fredv2
---
apiVersion: v1
kind: Service
metadata:
  name: fredv2-api
  namespace: fred
  labels:
    app.kubernetes.io/name: fredv2-api
  annotations:
     service.cilium.io/global: "true"
     service.cilium.io/affinity: "remote"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: fredv2-api
